MAGETWO-90578: Hidden overflow causes issues when dragging internal content types
- apply individual Tab border-radius override to preview

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/stage/contentblock/_tab-item.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/stage/contentblock/_tab-item.less
@@ -4,6 +4,16 @@
 //  */
 
 .pagebuilder-content-type {
+    &.tab-align-left {
+        .pagebuilder-tab-item {
+            border-top-left-radius: 0 !important;
+        }
+    }
+    &.tab-align-right {
+        .pagebuilder-tab-item {
+            border-top-right-radius: 0 !important;
+        }
+    }
     &.pagebuilder-tab-item {
         min-height: inherit;
 
